# bonkfun-trading-snipper-grpc

./: Cargo.toml  PROJECT_ANALYSIS.md  README.md  config.toml
src/: App.tsx  lib.rs  main.rs
src/config/: clients.rs  credentials.rs  mod.rs  trade_setting.rs
src/config/toml_setting/: credentials.rs  filter_setting.rs  mod.rs  trade_settings.rs
src/constants/: addresses.rs  constants.rs  contexts.rs  discriminator.rs  mod.rs
src/modules/: mod.rs  process_update_grpc.rs
src/modules/parse/: mod.rs  parse_bonk_ix.rs  parse_bonk_tx.rs
src/pages/readme/: index.tsx
src/utils/: blockhash.rs  mod.rs  parse_data.rs  setup_subscribe.rs
