[package]
name = "bonk-sniper-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
yellowstone-grpc-proto = "8.0.0"
yellowstone-grpc-client = "8.0.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
solana-sdk = "2.3.0"
solana-client = "2.3.0"
futures = "0.3.24"
bs58 = "0.4"
borsh = "1.5.7"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
bincode = "1.3.3"
bs64 = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
solana-relayer-adapter-rust = "3.2.1"
toml = "0.9.2"
